--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "express": "^4.19.2",
     "express-handlebars": "^5.3.5",
     "fs-extra": "^9.1.0",
+    "mongodb": "^6.7.0",
+    "mongoose": "^8.4.3",
     "socket.io": "^4.7.5",
     "uuid": "^8.3.2"
   },
